# nexusd

./: AGENTS.md  ARCHITECTURE.md  Cargo.toml  README.md  flake.nix  manifest
.beads/: config.yaml  metadata.json
spec/: example.nexus  grammar.md
spec/examples/: edits.nexus  flow-graph.nexus  genesis-seed.nexus  patterns-and-edits.nexus  queries.nexus  tier-0-canonical.nexus
src/: connection.rs  criome_link.rs  daemon.rs  error.rs  lib.rs  listener.rs  main.rs  parse.rs  parser.rs  renderer.rs
src/cli_msg/: frame.rs  mod.rs  reply.rs  request.rs
src/client_msg/: fallback.rs  frame.rs  mod.rs  path.rs  reply.rs  request.rs
tests/: parse.rs  parser.rs  renderer.rs
