[package]
name         = "nexus"
version      = "0.1.0"
edition      = "2024"
rust-version = "1.85"
license      = "MIT OR Apache-2.0"
repository   = "https://github.com/LiGoldragon/nexus"
description  = "Nexus — the text request language and its translator daemon. Parses nexus messages, forwards rkyv signal frames to criome. Includes the grammar spec under spec/."

[lib]
name = "nexus"
path = "src/lib.rs"

[[bin]]
name = "nexus-daemon"
path = "src/main.rs"

[[bin]]
name = "nexus-parse"
path = "src/bin/parse.rs"

[[bin]]
name = "nexus-render"
path = "src/bin/render.rs"

[dependencies]
thiserror  = "2"
tokio      = { version = "1", features = ["rt-multi-thread", "macros", "io-util", "net"] }
ractor     = { version = "0.15", features = ["async-trait"] }
signal     = { git = "https://github.com/LiGoldragon/signal.git", branch = "main" }
nota-codec = { git = "https://github.com/LiGoldragon/nota-codec.git", branch = "main" }
